# asair-ai-sandbox

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  TESTING_GUIDE.md  pyproject.toml  sandbox.yaml
.claude/: settings.json
docs/: design.md
examples/: sandbox.yaml
examples/scenes/: phone_collection.yaml
examples/suites/: persona_consistency.yaml  phone_extraction.yaml
src/sandbox/: __init__.py  cli.py
src/sandbox/assertion/: base.py  builder.py  llm_judge.py  performance.py  scene_judge.py  string_match.py
src/sandbox/client/: base.py  dify_chat.py  judge_llm.py
src/sandbox/core/: config.py  exceptions.py  logging.py
src/sandbox/extractor/: scene_extractor.py
src/sandbox/report/: json_report.py
src/sandbox/runner/: engine.py  multi_turn.py  single_turn.py
src/sandbox/schema/: config.py  result.py  scene.py  test_case.py
src/sandbox/scoring/: dimensions.py  scorer.py
src/sandbox/utils/: rate_limiter.py  template.py  yaml_loader.py
tests/: conftest.py  test_core.py  test_judge.py  test_multi_turn.py  test_scene.py
